--- a/bin/install
+++ b/bin/install
@@ -36,6 +36,18 @@ if [[ -f "$rootPath/docker-compose.$RUNENV.yml" ]]; then
   echo "Nothing to do, docker-compose.$RUNENV.yml exist. Remove it first!"
   exit 1;
 else
+  ES_NET=$(read_var ES_NET .env)
+  mkdir -p $rootPath/extras/hosts
+  echo "::1               localhost ip6-localhost ip6-loopback" > $rootPath/extras/hosts/hosts
+  echo "127.0.0.1         localhost" >> $rootPath/extras/hosts/hosts
+  echo "${ES_NET}.2     es01" >> $rootPath/extras/hosts/hosts
+  echo "${ES_NET}.3     es02" >> $rootPath/extras/hosts/hosts
+  echo "${ES_NET}.5     logstash" >> $rootPath/extras/hosts/hosts
+  echo "${ES_NET}.6     kibana" >> $rootPath/extras/hosts/hosts
+  echo "${ES_NET}.7     heartbeat" >> $rootPath/extras/hosts/hosts
+  echo "${ES_NET}.8     metricbeat" >> $rootPath/extras/hosts/hosts
+  echo "${ES_NET}.9     filebeat" >> $rootPath/extras/hosts/hosts
+  echo "${ES_NET}.10    apm-server" >> $rootPath/extras/hosts/hosts
   cat $rootPath/compose/docker-head.yml > $rootPath/docker-compose.$RUNENV.yml
   cat $rootPath/compose/docker-es01.yml >> $rootPath/docker-compose.$RUNENV.yml
   cat $rootPath/compose/docker-es02.yml >> $rootPath/docker-compose.$RUNENV.yml
