--- a/bin/install
+++ b/bin/install
@@ -43,7 +43,7 @@ else
   echo "::1               localhost ip6-localhost ip6-loopback" > $rootPath/extras/hosts/hosts
   echo "127.0.0.1         localhost" >> $rootPath/extras/hosts/hosts
   echo "${ES_NET}.2     es01       es01.${ELASTIC_NETWORK}" >> $rootPath/extras/hosts/hosts
-  echo "${ES_NET}.3     es02       es02.${ELASTIC_NETWORK}" >> $rootPath/extras/hosts/hosts
+  echo "${ES_NET}.3     es02       es01.${ELASTIC_NETWORK}" >> $rootPath/extras/hosts/hosts
   echo "${ES_NET}.5     logstash   logstash.${ELASTIC_NETWORK}" >> $rootPath/extras/hosts/hosts
   echo "${ES_NET}.6     kibana     kibana.${ELASTIC_NETWORK}" >> $rootPath/extras/hosts/hosts
   echo "${ES_NET}.7     heartbeat  heartbeat.${ELASTIC_NETWORK}" >> $rootPath/extras/hosts/hosts
@@ -61,7 +61,7 @@ else
   echo "================= START INSTALL ================"
   ${scriptPath}/start
   echo
-  echo "Use 'curl -s -X GET --cacert certs/ca/ca.crt -u elastic:[KIBANA_PASSWORD] https://es01:9200/?pretty | grep cluster_uuid' after setup set kibana password and exit or see 'docker logs -f ${APP_ID}-setup'"
+  echo "Use 'curl -s -X GET -u elastic:[KIBANA_PASSWORD] http://es01:9200/?pretty | grep cluster_uuid' after setup set kibana password and exit or see 'docker logs -f ${APP_ID}-setup'"
   echo
   echo "Set CLUSTER-UUID to '.env' and start 'bin/setup'"
   echo
